tests/baselines/reference/symbolProperty32.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty32.ts(7,6): error TS1023: An index signature parameter type must be 'string' or 'number'.


==== tests/cases/conformance/es6/Symbols/symbolProperty32.ts (1 errors) ====
    class C1 {
        [Symbol.toStringTag]() {
            return { x: "" };
        }
    }
    class C2 extends C1 {
        [s: symbol]: () => { x: number };
         ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    }